[KAIZEN] - tmux起動時にemacsがnwオプションで起動するようにした。 - fishのpowerlineの色をターミナルの色にした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+# source powerline
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+run-shell "powerline-daemon -q"
+source /usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+
 # set prefix key to C-q
 set -g prefix C-q
 
@@ -36,7 +42,7 @@ setw -g mouse # tmxu 2.1
 
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # ステータスバーの色を設定する
 set -g status-fg white
@@ -66,7 +72,7 @@ set -g message-attr bright
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=white]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 ## 右パネルを設定する
 set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
@@ -79,4 +85,4 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 ## ステータスバーを上部に表示する
-set -g status-position top
+set -g status-position bottom
