config.fishをLinuxとmacOSで環境分けた

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 run-shell "powerline-daemon -q"
-source /usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+source $POWERLINE_TMUX
 
 # set prefix key to C-q
 set -g prefix C-q
@@ -33,6 +33,7 @@ setw -g pane-base-index 1
 # マウス操作を有効にする
 setw -g mouse # tmxu 2.1
 
+
 # tmux 2.0
 #set-option -gw mode-mouse on
 #set-option -g mouse-utf8 on
@@ -42,7 +43,7 @@ setw -g mouse # tmxu 2.1
 
 
 # 256色端末を使用する
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # ステータスバーの色を設定する
 set -g status-fg white
@@ -85,14 +86,12 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 ## ステータスバーを上部に表示する
-<<<<<<< HEAD
-set -g status-position bottom
-=======
+
 set -g status-position top
 
 ## clipboad-setting
-unbind -t emacs-copy M-w
-unbind -t emacs-copy C-w
-bind-key -t emacs-copy M-w copy-pipe "xsel -bi"
-bind-key -t emacs-copy C-w copy-pipe "xsel -bi"
->>>>>>> master
+# unbind -t emacs-copy M-w
+# unbind -t emacs-copy C-w
+# bind-key -t emacs-copy M-w copy-pipe "xsel -bi"
+# bind-key -t emacs-copy C-w copy-pipe "xsel -bi"
+
