--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -95,3 +95,10 @@ set -g status-position top
 # bind-key -t emacs-copy M-w copy-pipe "xsel -bi"
 # bind-key -t emacs-copy C-w copy-pipe "xsel -bi"
 
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/path/to/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/path/to/tmux-powerline/powerline.sh right)"
